--- a/publish/static/css/owo.main.msghk8hji2l.css
+++ b/publish/static/css/owo.main.msghk8hji2l.css
@@ -52,6 +52,24 @@ ul {
 li {
   list-style: none;
 }
+.owo-hover-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+}
+.owo-hover-grow:hover, .owo-hover-grow:focus, .owo-hover-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
 
 .swiper-box {
   height: 330px;
@@ -202,11 +220,11 @@ li {
   text-align: center;
   background-color: transparent;
 }
-.home .main-image {
+.main-image {
   width: 100%;
 }
 
-.home .title-bar {
+.title-bar {
   background-image: url('../resource/title-bar.png');
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -218,14 +236,14 @@ li {
   margin-top: -38px;
 }
 
-.home .title-bar ul {
+.title-bar ul {
   width: 1000px;
   margin: 0 auto;
   height: 60px;
   position: relative;
 }
 
-.home .title-bar li {
+.title-bar li {
   display: inline-block;
   line-height: 60px;
   font-size: 22px;
@@ -234,19 +252,19 @@ li {
   cursor: pointer;
 }
 
-.home .title-bar li:hover {
+.title-bar li:hover {
   font-weight: bold;
 }
 
-.home .title-bar a {
+.title-bar a {
   color: white;
 }
 
-.home .title-bar a:hover {
-  text-decoration: underline;
+.title-bar a:hover {
+  color: white;
 }
 
-.home .main-title {
+.main-title {
   font-size: 36px;
   height: 100px;
   line-height: 100px;
@@ -256,11 +274,11 @@ li {
   text-align: center;
 }
 
-.home .main-title a {
+.main-title a {
   color: #bc1b21;
 }
 
-.home .main-box .left {
+.main-box .left {
   width: 490px;
   height: 330px;
   float: left;
@@ -268,13 +286,13 @@ li {
   margin-right: 30px;
 }
 
-.home .main-box .right {
+.main-box .right {
   width: 480px;
   height: 330px;
   float: left;
 }
 
-.home .main-box .right li {
+.main-box .right li {
   border-bottom: 2px dotted #a4a4a4;
   height: 85px;
   padding: 15px 0;
@@ -282,26 +300,26 @@ li {
   color: #222;
 }
 
-.home .main-box .right li h2 {
+.main-box .right li h2 {
   font-size: 22px;
   line-height: 35px;
   margin-bottom: 3px;
   font-family: "Microsoft YaHei";
 }
 
-.home .main-box .right li p {
+.main-box .right li p {
   font-size: 14px;
   line-height: 23px;
 }
 
-.home .agenda-box {
+.agenda-box {
   height: 66px;
   width: 1000px;
   border-bottom: 2px dotted #a4a4a4;
   padding: 25px 0;
 }
 
-.home .agenda-box .agenda {
+.agenda-box .agenda {
   height: 66px;
   width: 200px;
   color: #222;
@@ -313,18 +331,18 @@ li {
   border-right: none;
 }
 
-.home .agenda-box .agenda span {
+.agenda-box .agenda span {
   font-size: 22px;
   line-height: 66px;
 }
 
-.home .agenda-box .agenda p {
+.agenda-box .agenda p {
   line-height: 20px;
   font-size: 14px;
   margin: 13px 0;
 }
 
-.home .agenda-box .agenda img {
+.agenda-box .agenda img {
   position: absolute;
   right: 10px;
   top: 0;
@@ -332,45 +350,45 @@ li {
   margin: auto;
 }
 
-.home .agenda-box .fl:nth-child(2) {
+.agenda-box .fl:nth-child(2) {
   border-right: 1px solid #404040;
 }
 
-.home .agenda-box .fr:nth-child(3) {
+.agenda-box .fr:nth-child(3) {
   border-right: 1px solid #404040;
 }
 
-.home .calendar-box {
+.calendar-box {
   width: 1000px;
   height: 166px;
   margin-top: 25px;
   background-image: url('../resource/calendar.png');
 }
 
-.home .rolling-news {
+.rolling-news {
   width: 1000px;
   height: 148px;
   margin-top: 25px;
   background-image: url('../resource/rolling-news.jpg');
 }
 
-.home .plate-title-bar {
+.plate-title-bar {
   margin: 30px 0;
 }
 
-.home .video-box {
+.video-box {
   height: 406px;
   width: 100%;
 }
 
-.home .video-box .left {
+.video-box .left {
   width: 721px;
   height: 100%;
   background-size: 100% 100%;
   background-image: url('http://www.people.com.cn/NMediaFile/2019/1113/MAIN201911131050544300484849198.jpg');
 }
 
-.home .video-box .center {
+.video-box .center {
   width: 70px;
   height: 100%;
   background-repeat: no-repeat;
@@ -379,16 +397,16 @@ li {
   background-image: url('../resource/point.png');
 }
 
-.home .video-box .right {
+.video-box .right {
   width: 244px;
   height: 100%;
 }
 
-.home .video-box .right ul {
+.video-box .right ul {
   height: 375px;
 }
 
-.home .video-box .right li {
+.video-box .right li {
   width: 100%;
   height: 33.33%;
   position: relative;
@@ -396,12 +414,12 @@ li {
   cursor: pointer;
 }
 
-.home .video-box .right li img {
+.video-box .right li img {
   width: 100%;
   height: 100%;
 }
 
-.home .video-box .right li .info {
+.video-box .right li .info {
   position: absolute;
   left: 0;
   top: 0;
@@ -419,17 +437,17 @@ li {
   display: none;
 }
 
-.home .video-box .right li:hover .info {
+.video-box .right li:hover .info {
   display: -webkit-box;
   display: flex;
 }
 
-.home .video-box .right .control-bar {
+.video-box .right .control-bar {
   height: 30px;
   background-color: #cd3a44;
 }
 
-.home .video-box .right .control-bar .fl {
+.video-box .right .control-bar .fl {
   width: 50%;
   height: 100%;
   background-repeat: no-repeat;
@@ -437,36 +455,36 @@ li {
   cursor: pointer;
 }
 
-.home .video-box .right .control-bar .down {
+.video-box .right .control-bar .down {
   border-right: 1px solid #ccc;
   width: 121px;
   background-image: url('../resource/down.png');
 }
 
-.home .video-box .right .control-bar .up {
+.video-box .right .control-bar .up {
   background-image: url('../resource/up.png');
 }
 
-.home .unscramble .left {
+.unscramble .left {
   width: 485px;
   height: 220px;
   margin-right: 30px;
   background-color: #ccc;
 }
 
-.home .unscramble .right {
+.unscramble .right {
   width: 485px;
   height: 216px;
   margin: 2px 0;
 }
 
-.home .focus-box {
+.focus-box {
   height: 365px;
   position: relative;
   background-color: #ccc;
 }
 
-.home .focus-box .swiper-button {
+.focus-box .swiper-button {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -474,25 +492,25 @@ li {
   cursor: pointer;
 }
 
-.home .focus-box .left-button {
+.focus-box .left-button {
   left: -30px;
 }
 
-.home .focus-box .right-button {
+.focus-box .right-button {
   right: -30px;
 }
 
-.home .show {
+.show {
   margin: 30px 0;
 }
 
-.home .people-box {
+.people-box {
   height: 380px;
   position: relative;
   background-color: #ccc;
 }
 
-.home .people-box .swiper-button {
+.people-box .swiper-button {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -500,16 +518,16 @@ li {
   cursor: pointer;
 }
 
-.home .people-box .left-button {
+.people-box .left-button {
   left: 20%;
 }
 
-.home .people-box .right-button {
+.people-box .right-button {
   right: 20%;
 }
 
-.home .yiantian li,
-.home .yiantian a {
+.yiantian li,
+.yiantian a {
   color: #222;
   font-size: 16px;
   line-height: 32px;
@@ -517,24 +535,24 @@ li {
   overflow: hidden;
 }
 
-.home .yiantian li:hover,
-.home .yiantian a:hover {
+.yiantian li:hover,
+.yiantian a:hover {
   color: #bc1b21;
 }
 
-.home .yiantian li {
+.yiantian li {
   width: 46%;
   float: left;
   padding-right: 4%;
 }
 
-.home .picture-box {
+.picture-box {
   height: 600px;
   position: relative;
   background-color: #ccc;
 }
 
-.home .picture-box .swiper-button {
+.picture-box .swiper-button {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -542,43 +560,43 @@ li {
   cursor: pointer;
 }
 
-.home .picture-box .left-button {
+.picture-box .left-button {
   left: 20%;
 }
 
-.home .picture-box .right-button {
+.picture-box .right-button {
   right: 20%;
 }
 
-.home .three-image-box {
+.three-image-box {
   height: 150px;
 }
 
-.home .three-image-box li,
-.home .three-image-box a {
+.three-image-box li,
+.three-image-box a {
   height: 100%;
 }
 
-.home .three-image-box a,
-.home .three-image-box img {
+.three-image-box a,
+.three-image-box img {
   width: 100%;
   height: 100%;
 }
 
-.home .three-image-box li {
+.three-image-box li {
   float: left;
   overflow: hidden;
   width: 313px;
 }
 
-.home .three-image-box li:nth-child(2) {
+.three-image-box li:nth-child(2) {
   margin: 0 30px;
 }
 
-.home .smoke {
+.smoke {
   background-color: whitesmoke;
 }
 
-.home .mt30 {
+.mt30 {
   margin: 30px 0;
 }
