--- a/publish/static/css/main.css
+++ b/publish/static/css/main.css
@@ -9,13 +9,16 @@ body, html {
   -webkit-overflow-scrolling: touch;
   
 }
+.home {
+  overflow: hidden;
+}
 html {
   background-color: #ffffff;
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
 }
-body, html, .owo {
+body, html {
   padding: 0;
   margin: 0;
   min-height: 900px;
