--- a/publish/static/css/owo.main.msghk8hji2l.css
+++ b/publish/static/css/owo.main.msghk8hji2l.css
@@ -723,11 +723,11 @@ li {
 }
 
 .picture-box .left-button {
-  left: 5%;
+  left: 1%;
 }
 
 .picture-box .right-button {
-  right: 5%;
+  right: 1%;
 }
 
 .three-image-box {
@@ -793,6 +793,8 @@ li {
 
 .people-box .roundabout-moveable-item {
   margin: auto;
+  right: -1%;
+  padding-right: 260px;
 }
 
 .people-box .roundabout-moveable-item[roundabout-index="3"] {
@@ -813,8 +815,20 @@ li {
 }
 
 .picture-box li {
-  width: 1000px;
-  height: 600px;
+  width: 800px;
+  height: 500px;
+}
+
+.picture-box .roundabout-in-focus .shelter {
+  display: none;
+}
+.picture-box .shelter {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .picture-box li em {
@@ -827,7 +841,8 @@ li {
   font-style: normal;
   display: block;
   width: 98%;
-  line-height: 25px;
+  line-height: 35px;
+  font-size: 14px;
   display: none;
 }
 
